--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.10",
-    "nodemon": "^3.1.7",
     "openai": "^4.68.4",
     "react-router-dom": "^6.27.0",
     "vite": "^5.4.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.3"
+    "@vitejs/plugin-react": "^4.3.3",
+    "nodemon": "^3.1.7"
   }
 }
